--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: krometis # your GitHub user name
 twitter_username: # your Twitter handle
-linkedin_username: justin-krometis # your LinkedIn user name
+linkedin_username: justin-krometis-b54b40205 # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
-orcid_id: # your ORCID ID
+orcid_id: 0000-0002-2862-112X # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
